got signalr working with pcf

--- a/adub-signalr-sample/Pages/Index.cshtml
+++ b/adub-signalr-sample/Pages/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@page
+<h1>Nothing to see here</h1>
+<!--
 <div class="container">
     <div class="row">&nbsp;</div>
     <div class="row">
@@ -25,3 +27,4 @@
 <script src="~/lib/signalr/signalr.js"></script>
 <script src="~/js/chat.js"></script>
 @*<script src="~/js/es5-chat.js"></script>*@
+-->
